style.css
html {
  height: 100%;
}

body{
  margin: 0;
  padding: 0;
  background: rgba(195,226,227,0.2);
  overflow-y: auto;
}

.background{
    background-image: url("wallpaper3.jpg");
    min-height: 100vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.s-box{
  width: 100vh;
  height: 100vh;
  background-color: transparent;
  position: absolute;
  z-index: 500;
  display: table;
}

.emptyrighthalf {
  background-color: transparent;
  position: absolute;
  right: 0px;
  width: 55vh;
  height: 100vh;
}

.box{
  position: absolute;
  left: 0px;
  width: 55vh;
  min-height: 100vh;
  background: rgba(0, 0, 0, 0.8);
  padding-left: 25px;  
  padding-right: 25px;  
  margin: none;
  text-align: center;
  color: white;
  font-family: 'Century Gothic',sans-serif;
}

.box-img{
  border-radius: 100%;
  width: 30vh;
  height: 30vh;
  padding-top: 25px;
}

.box h1{
  font-size: 8vh;
  letter-spacing: 4px;
  font-weight: 100;
}

.box h3{
  font-size: 4vh;
  letter-spacing: 3px;
  font-weight: 100;
}

.box h4{
  font-size: 2vh;
  letter-spacing: 3px;
  font-weight: 100;
}

.box ul{
  margin: 0;
  padding: 0;
}

.box li{
  display: inline-block;
  margin: 6px;
  list-style: none;
}

.box li a{
  color: white;
  text-decoration: none;
  font-size: 10vh;
  transition: all ease-in-out 250ms;
}

.box li a:hover{
  color: #b9b9b9;
}

.fa{
  font-size: 7vh;
}

.section-about {
  width: 100%;
  height: 100vh;
  background-color: transparent;
  z-index: 500;
  display: table;
}

.section-proj {
  width: 100%;
  height: 100vh;
  background-color: transparent;
  z-index: 500;
}
.section-work {
  width: 100%;
  height: 100vh;
  background-color: transparent;
  z-index: 500;
}
.aboutpicture{
  position: absolute;
  left: 0px;
  width: 37%;
  height: 100vh;
  text-align: center;
}

.about-image{
  border-radius: 10%;
  width: 200px;
  height: 200px;
  margin: auto;
}
.text-block{
  position: absolute;
  right: 0px;
  width: 63%;
  height: 100vh;
  
}
.section-text {
  font-family: "Athiti";
  color: black;
  padding-right: 25px;  
  margin: none;
  text-align: center;
  font-size: 20px;
}
.header {
  font-family: 'Athiti';
  text-align: center;
  color: rgba(214,10,0,1);
  text-decoration: bold;
  font-size: 25px;
}

.arrow{
  cursor: pointer;
  position: absolute;
  bottom: 0;
  left: 50%;
  margin-left:-20px;
  width: 60px;
  height: 60px;
  background-image: url("arrowdown.png");
  background-size: contain;
}

.bounce {
  animation: bounce 2s infinite;
}

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
}

.topnavbar{
  background-color: rgba(0,0,0,1);
  overflow: hidden
  height: 4vh;
  position: sticky;
}
.topnavbar a{
  float: centre
  color: rgba(0,0,0,0.65);
  text-align: center;
  padding-left: 100px;
  padding-right: 100px;
  padding-top: 0px;
  padding-bottom: 0px;
  text-decoration: none;
  font-size: 17px;
}
.topnavbar a:hover{
}
.topnavbar a.active {
    color: white;
}
.topnavbar li{
  display: inline;
}

